Finish development of auth module (for now)